--- a/HoloEverywhereLib/project.properties
+++ b/HoloEverywhereLib/project.properties
@@ -10,4 +10,5 @@
 # Project target.
 target=android-15
 android.library=true
-android.library.reference.1=../contrib/ActionBarSherlock/library
+android.library.reference.1=../../ActionBarSherlock/library
+
